# supranode

./: .gitignore  CMakeLists.txt  README.md
src/: supranode
src/dtypes/: dtypes.hh
src/network/: network-core.hh
src/node/: node-core.hh  node-stream-core.hh
src/random/: random-core.hh  random-distribution-core.hh
src/utils/: utils.hh
test/: boost_smoke_test.cc  eigen_smoke_test.cc  node_directed_test.cc  syntax_smoke_test.cc
